--- a/pyVerein/finance/templates/finance/costcenter/detail.html
+++ b/pyVerein/finance/templates/finance/costcenter/detail.html
@@ -75,9 +75,11 @@
             </tr>
         </tfoot>
     </table>
+    {% if perms.finance.change_costcenter %}
     <a href="{% url 'finance:costcenter_edit' pk=costcenter.pk %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Edit' %}">
         <i class="mdc-fab__icon fa fa-pencil-alt"></i>
     </a>    
+    {% endif %}
 {% endblock %}
 {% block foot %}
 <!-- Datatables -->
