--- a/pyVerein/finance/templates/finance/creditor/detail.html
+++ b/pyVerein/finance/templates/finance/creditor/detail.html
@@ -64,9 +64,11 @@
             </tr>
         </tfoot>
     </table>
+    {% if perms.finance.change_creditor %}
     <a href ="{% url 'finance:creditor_edit' pk=creditor.pk %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Edit' %}">
         <i class="mdc-fab__icon fa fa-pencil-alt"></i>
     </a>    
+    {% endif %}
     <a href ="{% url 'finance:creditor_clear' account=creditor.pk %}" class="mdc-fab mdc-fab--absolute-bottom-right second" aria-label="" title="{% trans 'Clearing' %}" target="_blank">
         <i class="mdc-fab__icon far fa-check-square"></i>
     </a>   
