--- a/pyVerein/finance/templates/finance/debitor/detail.html
+++ b/pyVerein/finance/templates/finance/debitor/detail.html
@@ -62,9 +62,11 @@
             </tr>
         </tfoot>
     </table>
+    {% if perms.finance.change_debitor %}
     <a href ="{% url 'finance:debitor_edit' pk=debitor.pk %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Edit' %}">
         <i class="mdc-fab__icon fa fa-pencil-alt"></i>
     </a>    
+    {% endif %}
     <a href ="{% url 'finance:debitor_clear' account=debitor.pk %}" class="mdc-fab mdc-fab--absolute-bottom-right second" aria-label="" title="{% trans 'Clearing' %}" target="_blank">
         <i class="mdc-fab__icon far fa-check-square"></i>
     </a>   
