--- a/pyVerein/finance/templates/finance/debitor/detail.html
+++ b/pyVerein/finance/templates/finance/debitor/detail.html
@@ -67,9 +67,11 @@
         <i class="mdc-fab__icon fa fa-pencil-alt"></i>
     </a>    
     {% endif %}
-    <a href ="{% url 'finance:debitor_clear' account=debitor.pk %}" class="mdc-fab mdc-fab--absolute-bottom-right second" aria-label="" title="{% trans 'Clearing' %}" target="_blank">
+    {% if perms.finance.add_transaction and perms.finance.change_transaction %}
+    <a href ="{% url 'finance:debitor_clear' account=debitor.pk %}" class="mdc-fab mdc-fab--absolute-bottom-right{% if perms.finance.change_debitor %} second{% endif %}" aria-label="" title="{% trans 'Clearing' %}" target="_blank">
         <i class="mdc-fab__icon far fa-check-square"></i>
     </a>   
+    {% endif %}
 {% endblock %}
 
 {% block foot %}<!-- Datatables -->
