--- a/pyVerein/finance/templates/finance/transaction/list.html
+++ b/pyVerein/finance/templates/finance/transaction/list.html
@@ -75,9 +75,11 @@
             {% endfor %}
         </tbody>
     </table>
+    {% if perms.finance.add_transaction %}
     <a href ="{% url 'finance:transaction_create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Add' %}" target="_blank">
         <i class="mdc-fab__icon fa fa-plus"></i>
     </a>
+    {% endif %}
 {% endblock %}
 
 {% block foot %}<!-- Datatables -->
