--- a/pyVerein/members/templates/members/division/list.html
+++ b/pyVerein/members/templates/members/division/list.html
@@ -39,9 +39,11 @@
             {% endfor %}
         </tbody>
     </table>
+    {% if perms.members.add_division %}
     <a href ="{% url 'members:division_create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="" title="{% trans 'Add' %}" target="_blank">
         <i class="mdc-fab__icon fa fa-plus"></i>
     </a>
+    {% endif %}
 {% endblock %}
 
 {% block foot %}<!-- Datatables -->
