Added record history

--- a/pyVerein/app/static/app/css/app.css
+++ b/pyVerein/app/static/app/css/app.css
@@ -182,7 +182,7 @@ footer#page-footer {
   background: #2979FF;
   color: #FAFAFA;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   padding-right: 1rem;
   padding-left: 1rem; }
