--- a/pyVerein/app/templates/app/base.html
+++ b/pyVerein/app/templates/app/base.html
@@ -103,7 +103,16 @@
             </section>
             {% include "app/_attributions.html" %}
             <footer id="page-footer">
-                pyVerein by Jannik Heuer&nbsp;|&nbsp;<a href="#" id="show-attributions" class="mdc-theme--on-primary" title="{% trans 'Attributions' %}">{% trans 'Attributions' %}</a>
+                <div class="history">
+                    {% block history %}
+                        {% if instance %}
+                            {% blocktrans with created_at=instance.created_at created_by=instance.created_by.get_full_name modified_by=instance.last_modified_by.get_full_name modified_at=instance.modified_at %}Created at {{ created_at }} by {{ created_by }}.<br/>Last modified at {{ modified_at }} by {{ modified_by }}.{% endblocktrans %}
+                        {% endif %}
+                    {% endblock %}
+                </div>
+                <div class="attributions">
+                        pyVerein by Jannik Heuer&nbsp;|&nbsp;<a href="#" id="show-attributions" class="mdc-theme--on-primary" title="{% trans 'Attributions' %}">{% trans 'Attributions' %}</a>
+                </div>
             </footer>
         </div>
     </div>
