--- a/material.io/sass/app.scss
+++ b/material.io/sass/app.scss
@@ -249,7 +249,7 @@ footer#page-footer{
     background: $mdc-theme-primary;
     color: $mdc-theme-on-primary;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     padding-right: 1rem;
     padding-left: 1rem;
