--- a/pyVerein/finance/templates/finance/impersonal/detail.html
+++ b/pyVerein/finance/templates/finance/impersonal/detail.html
@@ -69,6 +69,12 @@
     {% endif %}
 {% endblock %}
 
+{% block history %}
+    {% with impersonal as instance %}
+        {{block.super}}
+    {% endwith %}
+{% endblock %}
+
 {% block foot %}<!-- Datatables -->
     <script src="{% static 'app/vendors/datatables.net/datatables.min.js' %}"></script>
     <script src="{% static 'app/vendors/datatables.net/datatables.material.min.js' %}"></script>
