--- a/pyVerein/finance/templates/finance/transaction/detail.html
+++ b/pyVerein/finance/templates/finance/transaction/detail.html
@@ -165,6 +165,12 @@
     {% endif %}
 {% endblock %}
 
+{% block history %}
+    {% with history_transaction as instance %}
+        {{block.super}}
+    {% endwith %}
+{% endblock %}
+
 {% block foot %}{% if cleared_transactions %}
         <script>
             $(document).ready(function () {
