--- a/pyVerein/app/templates/app/base.html
+++ b/pyVerein/app/templates/app/base.html
@@ -89,7 +89,7 @@
                                     <span class="mdc-list-item__text">{% trans 'Profile' %}</span>
                                 </a>
                                 <hr class="mdc-list-divider">
-                                <a href="{% url  'logout' %}" title="{% trans 'Sign out' %}" class="mdc-list-item logout">
+                                <a href="{% url  'account:logout' %}" title="{% trans 'Sign out' %}" class="mdc-list-item logout">
                                     <span class="mdc-list-item__graphic fa fa-sign-out-alt" aria-hidden="true"></span>
                                     <span class="mdc-list-item__text">{% trans 'Sign out' %}</span>
                                 </a>      
