--- a/pyVerein/app/static/app/css/material.css
+++ b/pyVerein/app/static/app/css/material.css
@@ -6326,3 +6326,6 @@ a.mdc-fab {
 
 .mdc-form-field {
   font-size: 1rem; }
+
+.mdc-button.mdc-button--danger:not(:disabled) {
+  background-color: #d50000; }
