--- a/pyVerein/app/templates/app/_attributions.html
+++ b/pyVerein/app/templates/app/_attributions.html
@@ -49,6 +49,48 @@
                 </p>
                 <p>
                     <h4>
+                        Django-Author
+                    </h4>
+                    <span class="mdc-typography--overline">Django-Author</span> {% trans 'by' %} lambdalisue<br />
+                    {% trans 'Published under' %} <a href="http://www.apache.org/licenses/LICENSE-2.0.txt" title="Apache License Version 2.0" target="_blank">Apache License Version 2.0</a> {% trans 'at' %} <a href="https://github.com/lambdalisue/django-author" title="{% trans 'Open at' %} github.com" target="_blank">github.com</a>
+                </p>
+                <p>
+                    <h4>
+                        Django-Dynamic-Preferences
+                    </h4>
+                    <span class="mdc-typography--overline">Django-Dynamic-Preferences</span> {% trans 'by' %} Eliot Berriot<br />
+                    {% trans 'Published under' %} <a href="https://opensource.org/licenses/BSD-3-Clause" title="BSD-3-Clause" target="_blank">BSD-3-Clause</a> {% trans 'at' %} <a href="https://github.com/EliotBerriot/django-dynamic-preferences/" title="{% trans 'Open at' %} github.com" target="_blank">github.com</a>
+                </p>
+                <p>
+                    <h4>
+                        Django Sendfile 2
+                    </h4>
+                    <span class="mdc-typography--overline">Django Sendfile 2</span> {% trans 'by' %} Matt Molyneaux<br />
+                    {% trans 'Published under' %} <a href="https://github.com/moggers87/django-sendfile2/blob/master/LICENSE" title="BSD-License" target="_blank">BSD-License</a> {% trans 'at' %} <a href="https://github.com/moggers87/django-sendfile2" title="{% trans 'Open at' %} github.com" target="_blank">github.com</a>
+                </p>
+                <p>
+                    <h4>
+                        Django-Seperatedvaluesfield
+                    </h4>
+                    <span class="mdc-typography--overline">Django-Seperatedvaluesfield</span> {% trans 'by' %} ulule<br />
+                    {% trans 'Published under' %} <a href="http://opensource.org/licenses/MIT" title="MIT" target="_blank">MIT-License</a> {% trans 'at' %} <a href="https://github.com/ulule/django-separatedvaluesfield" title="{% trans 'Open at' %} github.com" target="_blank">github.com</a>
+                </p>
+                <p>
+                    <h4>
+                        Django Two-Factor Authentication
+                    </h4>
+                    <span class="mdc-typography--overline">Django Two-Factor Authentication</span> {% trans 'by' %} Bouke<br />
+                    {% trans 'Published under' %} <a href="http://opensource.org/licenses/MIT" title="MIT" target="_blank">MIT-License</a> {% trans 'at' %} <a href="https://github.com/Bouke/django-two-factor-auth" title="{% trans 'Open at' %} github.com" target="_blank">github.com</a>
+                </p>
+                <p>
+                    <h4>
+                        Django-Widget-Tweaks
+                    </h4>
+                    <span class="mdc-typography--overline">Django-Widget-Tweaks</span> {% trans 'by' %} jazzband.co<br />
+                    {% trans 'Published under' %} <a href="http://opensource.org/licenses/MIT" title="MIT" target="_blank">MIT-License</a> {% trans 'at' %} <a href="https://github.com/jazzband/django-widget-tweaks/" title="{% trans 'Open at' %} github.com" target="_blank">github.com</a>
+                </p>
+                <p>
+                    <h4>
                         Font Awesome
                     </h4>
                     <span class="mdc-typography--overline">Font Awesome</span> {% trans 'by' %} Fonticons, Inc.<br />
@@ -88,6 +130,13 @@
                     </h4>
                     <span class="mdc-typography--overline">PleasWait.js</span> {% trans 'by' %} Pathgether<br />
                     {% trans 'Published under' %} <a href="http://opensource.org/licenses/MIT" title="MIT" target="_blank">MIT-License</a> {% trans 'at' %} <a href="http://pathgather.github.io/please-wait/" title="{% trans 'Open at' %} github.io" target="_blank">github.io</a>
+                </p>
+                <p>
+                    <h4>
+                        PyReportJasper
+                    </h4>
+                    <span class="mdc-typography--overline">PyReportJasper</span> {% trans 'by' %} jadsonbr<br />
+                    {% trans 'Published under' %} <a href="http://opensource.org/licenses/MIT" title="MIT" target="_blank">MIT-License</a> {% trans 'at' %} <a href="https://github.com/PyReportJasper/pyreportjasper" title="{% trans 'Open at' %} github.com" target="_blank">github.com</a>
                 </p>
                 <p>
                     <h4>
