--- a/pyVerein/members/templates/members/member/create.html
+++ b/pyVerein/members/templates/members/member/create.html
@@ -19,11 +19,11 @@
 {% block content %}
     <div class="main-narrow form">
         <div class="detail-content  mdc-elevation--z4">
-            <form action="{% url 'members:create' %}" method="POST" id="form">
+            <form action="{% url 'members:member_create' %}" method="POST" id="form">
                 {% include 'members/member/form_fields.html' %}
                 <div class="form-group form-submit">
                     <input type="submit" class="mdc-button mdc-button--raised" value="{% trans 'Save' %}" title="{% trans 'Save' %}" />
-                    <a href="{% url 'members:list' %}" class="mdc-button" title="{% trans 'Cancel' %}">{% trans 'Cancel' %}</a>
+                    <a href="{% url 'members:member_list' %}" class="mdc-button" title="{% trans 'Cancel' %}">{% trans 'Cancel' %}</a>
                 </div>
             </form>
         </div>
